--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,7 +2,7 @@
 @import "variables";
 
 // Import styles
-@import "node_modules/@coreui/styles/scss/coreui";
+@import "node_modules/@coreui/core/scss/coreui";
 
 // If you want to add something do it here
 @import "custom";
