refactor: updatestyles to latest version of @coreui/coreui

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
  * CoreUI - Open Source Dashboard UI Kit
- * @version v2.0.0-beta.0
+ * @version v2.0.0-beta.2
  * @link https://coreui.io
  * Copyright (c) 2018 creativeLabs Łukasz Holeczek
  * Licensed under MIT (https://coreui.io/license)
@@ -13420,7 +13420,7 @@ html[dir="rtl"] .aside-menu-show .aside-menu {
     z-index: 1020;
     width: 100%;
     text-align: center;
-    background-color: transparent;
+    background-color: #fff;
   }
   .app-header .navbar-toggler {
     color: #fff;
@@ -13438,6 +13438,9 @@ html[dir="rtl"] .aside-menu-show .aside-menu {
     z-index: 1019;
     width: 200px;
     height: calc(100vh - 55px);
+  }
+  .sidebar-minimizer {
+    display: none;
   }
   .aside-menu {
     position: fixed;
