fix: add missing title #371

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
  * CoreUI - Open Source Dashboard UI Kit
- * @version v2.0.0-beta.4
+ * @version v2.0.0-beta.6
  * @link https://coreui.io
  * Copyright (c) 2018 creativeLabs Łukasz Holeczek
  * Licensed under MIT (https://coreui.io/license)
@@ -10973,17 +10973,17 @@ canvas {
   white-space: nowrap;
 }
 
-.chartjs-tooltip .tooltip-body-item-value {
-  padding-left: 1rem;
-  margin-left: auto;
-  font-weight: 700;
-}
-
-.chartjs-tooltip-key {
+.chartjs-tooltip .tooltip-body-item-color {
   display: inline-block;
   width: 0.875rem;
   height: 0.875rem;
   margin-right: 0.875rem;
+}
+
+.chartjs-tooltip .tooltip-body-item-value {
+  padding-left: 1rem;
+  margin-left: auto;
+  font-weight: 700;
 }
 
 .dropdown-item {
